--- a/css/style.css
+++ b/css/style.css
@@ -158,128 +158,101 @@ footer {
 
 
 /*testimonial*/
-.gtco-testimonials {
-  position: relative;
-  margin-top: 30px;
+/*testimonial*/
+.testimonial {
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    background-color: #799B45;
+    font-family: 'Open Sans'
 }
 
-h2 {
-    font-size: 30px;
-    text-align: center;
-    color: #333333;
-    margin-bottom: 50px;
-  }
-}
-
-}
-.owl-stage-outer {
-    padding: 30px 0;
-  }
-
-  .owl-nav {
-    display: none;
-  }
-
-  .owl-dots {
-    text-align: center;
-}
-    span {
-      position: relative;
-      height: 10px;
-      width: 10px;
-      border-radius: 50%;
-      display: block;
-      background: #fff;
-      border: 2px solid #01b0f8;
-      margin: 0 5px;
-    }
-
-    .active {
-      box-shadow: none;
-}
-      span {
-        background: #01b0f8;
-        box-shadow: none;
-        height: 12px;
-        width: 12px;
-        margin-bottom: -1px;
-      }
-    }
-  }
-
-  .card {
-    background: #fff;
-    box-shadow: 0 8px 30px -7px #c9dff0;
-    margin: 0 20px;
-    padding: 0 10px;
-    border-radius: 20px;
-    border: 0;
-}
-    .card-img-top {
-      max-width: 100px;
-      border-radius: 50%;
-      margin: 15px auto 0;
-      box-shadow: 0 8px 20px -4px #95abbb;
-      width: 100px;
-      height: 100px;
-    }
-
-    h5 {
-      color: #01b0f8;
-      font-size: 21px;
-      line-height: 1.3;
-}
-      span {
-        font-size: 18px;
-        color: #666666;
-      }
-    }
-
-    p {
-      font-size: 18px;
-      color: #555;
-      padding-bottom: 15px;
-    }
-  }
-
-  .active {
-    opacity: 0.5;
-    transition: all 0.3s;
-  }
-
-  .center {
-    opacity: 1;
-}
-    h5 {
-      font-size: 24px;
-}
-      span {
-        font-size: 20px;
-      }
-    }
-
-    .card-img-top {
-      max-width: 100%;
-      height: 120px;
-      width: 120px;
-    }
-  }
-}
-
-@media (max-width: 767px) {
-  .gtco-testimonials {
-    margin-top: 20px;
-  }
-}
-
-.owl-carousel,
-  .owl-nav button, 
-    &.owl-next, &.owl-prev {
-      outline: 0;
+#demo {
+    background-color: #799B45;
+    max-width: 900px;
+    margin: auto
     
-  }
-
-  button.owl-dot {
-    outline: 0;
-  }
 }
+
+.caros-cap {
+    position: initial;
+    z-index: 10;
+    padding: 5rem 8rem;
+    color: rgba(78, 77, 77, 0.856);
+    text-align: center;
+    font-size: 1.2rem;
+    font-style: italic;
+    font-weight: bold;
+    line-height: 2rem
+}
+
+@media(max-width:767px) {
+    .caros-cap {
+        position: initial;
+        z-index: 10;
+        padding: 3rem 2rem;
+        color: rgba(78, 77, 77, 0.856);
+        text-align: center;
+        font-size: 0.7rem;
+        font-style: italic;
+        font-weight: bold;
+        line-height: 1.5rem
+    }
+}
+
+.caros-cap img {
+    width: 6rem;
+    border-radius: 5rem;
+    margin-top: 2rem
+}
+
+@media(max-width:767px) {
+    .caros-cap img {
+        width: 4rem;
+        border-radius: 4rem;
+        margin-top: 1rem
+    }
+}
+
+#image-caption {
+    font-style: normal;
+    font-size: 1rem;
+    margin-top: 0.5rem
+}
+
+@media(max-width:767px) {
+    #image-caption {
+        font-style: normal;
+        font-size: 0.6rem;
+        margin-top: 0.5rem
+    }
+}
+
+/*i {
+    background-color: rgb(223, 56, 89);
+    padding: 1.4rem*/
+}
+
+@media(max-width:767px) {
+    i {
+        padding: 0.8rem
+    }
+}
+
+.carousel-control-prev {
+    justify-content: flex-start
+}
+
+.carousel-control-next {
+    justify-content: flex-end
+}
+
+.carousel-control-prev,
+.carousel-control-next {
+    transition: none;
+    opacity: unset
+}
+
+
+
+/*services*/
