--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,20 @@ body {
   font-family: 'Poppins', sans-serif;
   color: #22
 }
-
+#nav{
+  background-color: #102544;
+}
+.navbar-brand, .nav-link{
+  color:#ffffff;
+}
+.navbar-brand:hover, .nav-link:hover{
+  color: #37ADC9;
+ 
+}
+.small-text{
+    font-size: 16px !important;
+    justify-content: center;
+}
       .bd-placeholder-img {
         font-size: 1.125rem;
         text-anchor: middle;
@@ -15,13 +28,39 @@ body {
         -moz-user-select: none;
         user-select: none;
       }
+  .fa-shopping-bag{
+        color: red;
+      }
 
       @media (min-width: 768px) {
         .bd-placeholder-img-lg {
           font-size: 3.5rem;
         }
       }
-    
+    .btn-primary{
+      background-color:#102544;
+    }
+
+    .btn-primary:hover{
+      background-color: #37ADC9;
+    }
+ .btn-outline-secondary{
+  outline-color:#102544; 
+  color: #000000;
+ }
+ .btn-outline-secondary:hover{
+  outline-color:#102544;
+  background-color: #37ADC9;
+  color: #ffffff;
+ }
+ .img-fluid{
+  width: 100%;
+  height: 100%;
+  min-width: 100%;
+ }
+#abut{
+  background-color: #37ADC9;
+}
     .bd-placeholder-img {
         font-size: 1.125rem;
         text-anchor: middle;
@@ -168,11 +207,12 @@ footer {
 }
 
 #demo {
-    background-color: #799B45;
+    background-color: #ffffff;
     max-width: 900px;
     margin: auto
-    
+
 }
+
 
 .caros-cap {
     position: initial;
@@ -254,5 +294,36 @@ footer {
 }
 
 
+}
+.myheadr {
+  
+  color: #000000;
+}
+#bordr{
+  color: #102544;
+}
+@media(max-width:767px) {
+    .caros-cap {
+        position: initial;
+        z-index: 10;
+        padding: 3rem 2rem;
+        
+        text-align: center;
+        font-size: 0.7rem;
+       
+        line-height: 1.5rem
+    }
+   #btnn {
+  /*width: 50%;*/
+  display: inline-block;
+  margin: 4px 2px;
+  cursor: pointer;
+  }
+}
 
-/*services*/
+/*.navbar-toggler{
+  background-color: #ffffff;
+  border-color: #000000;
+}
+*/
+
